[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "phasepack"
version = "1.5"
description = "A toolkit for phase-based feature detection"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Alistair Muldal", email = "alistair.muldal@pharm.ox.ac.uk"}
]
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "scipy"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Image Processing"
]

[project.urls]
Homepage = "https://github.com/WHOIGit/phasepack"
Repository = "https://github.com/WHOIGit/phasepack"

