[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "phasepack"
version = "1.5"
description = "A toolkit for phase-based feature detection"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Alistair Muldal", email = "alistair.muldal@pharm.ox.ac.uk"}
]
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "scipy",
    "pyfftw"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Image Processing"
]

[project.urls]
Homepage = "https://github.com/WHOIGit/phasepack"
Repository = "https://github.com/WHOIGit/phasepack"

[project.optional-dependencies]
test = ["pytest", "pytest-cov"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=phasepack",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=80"
]

[tool.coverage.run]
source = ["phasepack"]
omit = ["tests/*", "setup.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:"
]

